# site

./: .gitignore  .netlify  Cargo.toml  Diecast.toml  README.md  config.toml  netlify.toml  preview.bat  preview.sh  publish.bat  publish.sh  readme.md
.forestry/: settings.yml
archetypes/: notes.md  posts.md  work.md
content/: _redirects  about.md  binary.md  lately.md  reads.md
content/notes/: algorithms.md  angular.md  bitcoin.md  browser-extensions.md  clojure.md  cmake.md  computer-architecture.md  cpp.md  cryptography.md  data-structures.md  distributed-systems.md  docker.md  dutch.md  erlang.md  ffmpeg.md  game-development.md  gdb.md  git.md  go.md  graphql.md  haskell.md  java.md  javascript.md  julia.md  kubernetes.md  linux.md  lua.md  machine-learning.md  networking.md  objective-c.md  play.md  postgresql.md  problem-solving.md  python.md  rabbitmq.md  react.md  redis.md  ruby-on-rails.md  ruby.md  rust.md  (+9 more)
content/posts/: a-simpler-vim-statusline.md  custom-xkb-options-with-gnome.md  dots.md  drafts-in-hakyll.md  extra-dependencies-in-hakyll.md  im-back.md  live-editing-with-hakyll.md  naive-convolution-in-haskell.md  post-feed-in-hakyll.md  terminal-customization.md  test-post.md  the-switch-to-hakyll.md  xmonad-ignores-bindings.md
content/problems/: add-binary.md  add-row-at-depth.md  add-two-lists-as-numbers.md  appending-digits.md  binary-tree-level-order-traversal-ii.md  bit-parity.md  check-balance.md  check-if-number-is-odd.md  check-rotation.md  check-sub-tree-containment.md  climbing-stairs.md  compute-logarithm.md  construct-balanced-binary-search-tree-from-sorted-array.md  container-with-most-water.md  convert-sorted-array-to-binary-search-tree.md  count-and-say.md  count-order-inversions.md  create-and-return-linked-list.md  detect-cycle.md  detect-palindrome.md  determine-lexical-order.md  exponentiation.md  find-all-paths-summing-a-total.md  find-cycle-beginning.md  find-first-bad-version.md  find-kth-last-node.md  find-kth-smallest.md  find-lowest-common-ancestor-of-binary-search-tree.md  find-lowest-common-ancestor-of-binary-tree.md  find-maximum-sum-tree.md  find-missing-number-from-two-arrays.md  find-nearest-number-with-equal-number-of-one-bits.md  find-next-in-order-node-in-binary-search-tree.md  find-number-occurring-once-in-array-of-doubles.md  find-number-occurring-once-in-array-of-triples.md  find-smallest-missing-positive-integer.md  find-strongly-connected-components.md  generate-all-unique-pairs.md  generate-permutations.md  generate-phone-letter-combinations.md  (+46 more)
content/work/: aura.md  cdk.md  diecast.md  go-xmlrpc.md  (+21 more)
scripts/: pig.py
src/: git.rs  helpers.rs  main.rs  markdown.rs  view.rs
(+144 files in other folders)
