[package]
name = "site"
version = "0.1.0"
authors = ["Jorge Israel Peña <jorge.israel.p@gmail.com>"]

[dependencies]
toml = "*"
glob = "*"
typemap = "*"
time = "*"
log = "*"
env_logger = "*"
rustc-serialize = "*"
hoedown = "*"
regex = "*"
chrono = "*"
rss = "*"

[dependencies.diecast]
path = "../diecast"

[dependencies.diecast-toml]
path = "../toml"

[dependencies.diecast-tags]
path = "../tags"

[dependencies.diecast-date]
path = "../date"

[dependencies.diecast-live]
path = "../live"

[dependencies.diecast-versions]
path = "../versions"

[dependencies.diecast-websocket]
path = "../websocket"

[dependencies.diecast-git]
path = "../git"

[dependencies.diecast-rss]
path = "../rss"

[dependencies.diecast-scss]
path = "../scss"

[dependencies.diecast-handlebars]
path = "../handlebars"

