[package]
name = "site"
version = "0.1.0"
authors = ["Jorge Israel Peña <jorge.israel.p@gmail.com>"]

[profile.dev]
opt-level = 1
codegen-units = 4

[dependencies]
toml = "*"
glob = "*"
typemap = "*"
time = "*"
log = "*"
env_logger = "*"
rustc-serialize = "*"
hoedown = "*"
regex = "*"
chrono = "*"
rss = "*"
zmq = "*"
sha1 = "*"
syncbox = "*"

[dependencies.diecast]
path = "../diecast"

[dependencies.diecast-metadata]
path = "../metadata"
features = ["toml"]

[dependencies.diecast-tags]
path = "../tags"

[dependencies.diecast-date]
path = "../date"

[dependencies.diecast-live]
path = "../live"

[dependencies.diecast-versions]
path = "../versions"

[dependencies.diecast-websocket]
path = "../websocket"

[dependencies.diecast-git]
path = "../git"

[dependencies.diecast-feed]
path = "../feed"
features = ["rss"]

[dependencies.diecast-scss]
path = "../scss"

[dependencies.diecast-handlebars]
path = "../handlebars"
