[package]
name = "site"
version = "0.1.0"
authors = ["Jorge Israel Peña <jorge.israel.p@gmail.com>"]

[profile.dev]
opt-level = 1
codegen-units = 4

[dependencies]
toml = "*"
glob = "*"
typemap = "*"
time = "*"
log = "*"
env_logger = "*"
rustc-serialize = "*"
hoedown = "*"
regex = "*"
chrono = "*"
rss = "*"
zmq-rs = "*"
sha1 = "*"
syncbox = "*"

diecast = { path = "../diecast" }
diecast-tags = { path = "../tags" }
diecast-date = { path = "../date" }
diecast-live = { path = "../live" }
diecast-versions = { path = "../versions" }
diecast-websocket = { path = "../websocket" }
diecast-git = { path = "../git" }
diecast-scss = { path = "../scss" }
diecast-handlebars = { path = "../handlebars" }
diecast-metadata = { path = "../metadata", features = ["toml"] }
diecast-feed = { path = "../feed", features = ["rss"] }
